// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Upgrade /> should render 'no upgrade' message when [mongoVersion=3.6.3] 1`] = `
<Box__BoxGroup>
  <Upgrade__UpgradeHeader>
    <h2>
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="exclamation-circle"
      />
       Important Upgrade Information
    </h2>
  </Upgrade__UpgradeHeader>
  <Upgrade__UpgradeBody>
    <p>
      A major upgrade to Virtool 4.0.0 will be available soon. As part of this upgrade: 
    </p>
    <ul>
      <li>
        Versions of MongoDB older than 
        <strong>
          3.6
        </strong>
         will no longer be supported
      </li>
      <li>
        MongoDB 4.0 and newer will be supported
      </li>
    </ul>
    <p>
      <span>
        We provide a guide for 
      </span>
      <ExternalLink
        href="https://www.virtool.ca/docs/manual/gs_mongo/#upgrade-mongodb"
      >
        upgrading to a newer version of MongoDB
      </ExternalLink>
      <span>
         and are available for support.
      </span>
    </p>
    <p>
      <strong
        className="text-success"
      >
        Virtool detected MongoDB 
        3.6.3
         and no upgrade is required for this instance.
      </strong>
    </p>
  </Upgrade__UpgradeBody>
</Box__BoxGroup>
`;

exports[`<Upgrade /> should render 'upgrade required' message when [mongoVersion=3.2.1] 1`] = `
<Box__BoxGroup>
  <Upgrade__UpgradeHeader>
    <h2>
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="exclamation-circle"
      />
       Important Upgrade Information
    </h2>
  </Upgrade__UpgradeHeader>
  <Upgrade__UpgradeBody>
    <p>
      A major upgrade to Virtool 4.0.0 will be available soon. As part of this upgrade: 
    </p>
    <ul>
      <li>
        Versions of MongoDB older than 
        <strong>
          3.6
        </strong>
         will no longer be supported
      </li>
      <li>
        MongoDB 4.0 and newer will be supported
      </li>
    </ul>
    <p>
      <span>
        We provide a guide for 
      </span>
      <ExternalLink
        href="https://www.virtool.ca/docs/manual/gs_mongo/#upgrade-mongodb"
      >
        upgrading to a newer version of MongoDB
      </ExternalLink>
      <span>
         and are available for support.
      </span>
    </p>
    <p>
      <strong
        className="text-danger"
      >
        Virtool detected MongoDB 
        3.2.1
         and a database upgrade will be required to support Virtool 4.0.0.
      </strong>
    </p>
  </Upgrade__UpgradeBody>
</Box__BoxGroup>
`;
